--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=DotGothic16&display=swap" rel="stylesheet">
   <!---   -->
-  <link rel="stylesheet" href="https://hahihuhehohihe.web.fc2.com/app/3d2/index.css">
+  <link rel="stylesheet" href="https://raw.githubusercontent.com/sukimeta/first/gh-pages/index.js">
   
 </head>
 <body>
@@ -25,7 +25,7 @@
   <div id="pressw" class="opc0"></div>
   <div id="presss" class="opc0"></div>
   <div id="pressp" class="opc0"></div>
-  <script src="https://hahihuhehohihe.web.fc2.com/app/3d2/index.js"></script>
+  <script src="https://raw.githubusercontent.com/sukimeta/first/gh-pages/index.js"></script>
   <div class="ads">
     <!-- admax -->
     <div class="admax-ads" data-admax-id="ddb45183b5c6b280654861c895333ab8" style="display:inline-block;"></div>
