--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=DotGothic16&display=swap" rel="stylesheet">
   <!---   -->
-  <link rel="stylesheet" href="https://raw.githubusercontent.com/sukimeta/first/gh-pages/index.js">
+  <link rel="stylesheet" href="https://raw.githubusercontent.com/sukimeta/first/gh-pages/index.css">
   
 </head>
 <body>
