--- a/index.html
+++ b/index.html
@@ -4,14 +4,13 @@
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
   <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
   <title>そだてて ATR </title>
-  <meta name="keywords" content="webゲーム,ATR,ゲーム,育成,すきめた,スマホ,pc,あたる,ＡＴＲ">
   <link rel="preconnect" href="https://fonts.googleapis.com">
 
   <!--- google font -->
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=DotGothic16&display=swap" rel="stylesheet">
   <!---   -->
-  <link rel="stylesheet" href="https://raw.githubusercontent.com/sukimeta/first/gh-pages/index.css">
+  <link rel="stylesheet" href="/index.css">
   
 </head>
 <body>
@@ -25,7 +24,7 @@
   <div id="pressw" class="opc0"></div>
   <div id="presss" class="opc0"></div>
   <div id="pressp" class="opc0"></div>
-  <script src="https://raw.githubusercontent.com/sukimeta/first/gh-pages/index.js"></script>
+  <script src="/index.js"></script>
   <div class="ads">
     <!-- admax -->
     <div class="admax-ads" data-admax-id="ddb45183b5c6b280654861c895333ab8" style="display:inline-block;"></div>
